Fixed: spinner alignment.

--- a/assets/css/omgf-admin.less
+++ b/assets/css/omgf-admin.less
@@ -265,8 +265,8 @@
     top: 50%;
     left: 50%;
     position: absolute;
-    -ms-transform: translate(0, -70%);
-    transform: translate(0, -70%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
   }
 }
 
